tests/samples/positive/expressions/shift_amount_negative_zero.ax
module shift_amount_negative_zero;

fn main() -> i32 {
    let value: i32 = 1 << -0;
    if value != 1 {
        return 1;
    }
    return 0;
}
