tests/samples/negative/inference/local_inference_null.ax
module local_inference_null;

fn main() -> i32 {
    let value = null;
    return 0;
}
